--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "node-sass": "^4.9.3",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
-    "react-reveal": "^1.2.2"
+    "react-reveal": "^1.2.2",
+    "react-scroll": "^1.7.10"
   },
   "devDependencies": {},
   "scripts": {
