--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "node-sass": "^4.9.3",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
+    "react-headroom": "^2.2.2",
     "react-reveal": "^1.2.2",
     "react-scroll": "^1.7.10"
   },
