--- a/package.json
+++ b/package.json
@@ -5,20 +5,25 @@
   "main": "index.js",
   "dependencies": {
     "@zeit/next-sass": "^0.2.0",
+    "markdown-to-json": "^0.5.1",
     "next": "^6.1.1",
     "node-sass": "^4.9.3",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
     "react-headroom": "^2.2.2",
     "react-reveal": "^1.2.2",
-    "react-scroll": "^1.7.10"
+    "react-scroll": "^1.7.10",
+    "showdown": "^1.8.6"
   },
   "devDependencies": {},
   "scripts": {
     "dev": "next",
+    "predev": "npm run generatePosts",
     "build": "next build",
     "start": "next start",
-    "export": "next build && next export"
+    "preexport": "npm run generatePosts",
+    "export": "next build && next export",
+    "generatePosts": "m2j -c ./config/posts/*.md -o ./config/posts/allPosts.json"
   },
   "author": "",
   "license": "ISC"
